Work on NN models